[gd_scene load_steps=5 format=2]

[ext_resource path="res://the.tres" type="Theme" id=1]
[ext_resource path="res://logo.png" type="Texture" id=2]
[ext_resource path="res://menu.gd" type="Script" id=3]
[ext_resource path="res://environmentmenu.tres" type="Environment" id=4]

[node name="Control" type="Spatial"]
script = ExtResource( 3 )

[node name="Polygon2D" type="Polygon2D" parent="."]
modulate = Color( 1, 1, 1, 0.262745 )
position = Vector2( 32, 2 )
color = Color( 0.647059, 0.647059, 0.647059, 1 )
polygon = PoolVector2Array( 2, -2, 359, -1, 359, 36, 346, 69, 337, 118, 327, 161, 322, 181, 316, 211, 310, 245, 289, 306, 269, 366, 253, 431, 253, 494, 229, 539, 191, 569, 157, 598, 119, 621, -35, 631, -50, -4 )

[node name="Sprite" type="TextureRect" parent="."]
margin_left = 8.0
margin_top = -2.0
margin_right = 308.0
margin_bottom = 298.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelSelect" type="Button" parent="."]
margin_left = 67.0
margin_top = 273.0
margin_right = 243.0
margin_bottom = 327.0
theme = ExtResource( 1 )
text = "Level Select"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Button" parent="."]
margin_left = 67.0
margin_top = 344.0
margin_right = 243.0
margin_bottom = 398.0
theme = ExtResource( 1 )
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Help" type="Button" parent="."]
margin_left = 67.0
margin_top = 412.0
margin_right = 243.0
margin_bottom = 466.0
theme = ExtResource( 1 )
text = "Help"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 6.11825 )
environment = ExtResource( 4 )
fov = 95.7525

[node name="Boxes" type="Node" parent="."]

[node name="CSGBox" type="CSGBox" parent="Boxes"]
transform = Transform( 0.96926, -0.166461, 0.181178, 0.237245, 0.827434, -0.508986, -0.0651867, 0.536324, 0.841491, 0, 0, 0 )

[node name="CSGBox7" type="CSGBox" parent="Boxes"]
transform = Transform( 0.888799, 0.41916, -0.185313, -0.267097, 0.14518, -0.952671, -0.372418, 0.89623, 0.240992, 4.34927, 2.78006, -4.93708 )

[node name="CSGBox8" type="CSGBox" parent="Boxes"]
transform = Transform( 0.888799, 0.41916, -0.185313, 0.418428, -0.907135, -0.0449883, -0.186961, -0.0375544, -0.981649, -7.47675, 5.52702, -1.18575 )

[node name="CSGBox9" type="CSGBox" parent="Boxes"]
transform = Transform( 0.893083, -0.422743, -0.15392, -0.409205, -0.905471, 0.112575, -0.186961, -0.0375544, -0.981649, -15.9385, 1.792, -7.92222 )

[node name="CSGBox10" type="CSGBox" parent="Boxes"]
transform = Transform( 0.893083, -0.422743, -0.15392, -0.409205, -0.905471, 0.112575, -0.186961, -0.0375544, -0.981649, -15.9385, 1.792, -7.92222 )

[node name="CSGBox11" type="CSGBox" parent="Boxes"]
transform = Transform( 0.978783, -0.0924051, -0.18288, -0.16764, -0.874347, -0.455428, -0.117817, 0.476423, -0.871287, -13.5186, -8.71799, -4.45736 )

[node name="CSGBox12" type="CSGBox" parent="Boxes"]
transform = Transform( 0.978783, -0.0924051, -0.18288, -0.202499, -0.572452, -0.794539, -0.0312705, 0.814714, -0.579018, 12.3119, -8.71799, -4.45736 )

[node name="CSGBox13" type="CSGBox" parent="Boxes"]
transform = Transform( 0.875753, -0.25688, -0.408742, -0.481746, -0.519858, -0.705456, -0.0312705, 0.814714, -0.579018, 12.3119, -0.710894, -7.00267 )

[node name="CSGBox14" type="CSGBox" parent="Boxes"]
transform = Transform( 0.875753, -0.25688, -0.408742, -0.257858, -0.964684, 0.0537952, -0.408126, 0.058286, -0.911063, 19.0358, -0.710894, -7.00267 )

[node name="CSGBox15" type="CSGBox" parent="Boxes"]
transform = Transform( 0.894304, 0.226063, -0.386156, 0.408971, -0.763113, 0.5004, -0.181559, -0.605436, -0.774909, 17.4751, 5.31197, -18.6721 )

[node name="CSGBox16" type="CSGBox" parent="Boxes"]
transform = Transform( 0.894304, 0.226063, -0.386156, 0.443633, -0.335311, 0.831118, 0.0584025, -0.914583, -0.400159, 17.4751, 14.7867, -10.5261 )

[node name="CSGBox17" type="CSGBox" parent="Boxes"]
transform = Transform( 0.894304, 0.226063, -0.386156, 0.328301, 0.254888, 0.909533, 0.304038, -0.940174, 0.15373, 5.71833, 9.62552, -5.68471 )

[node name="CSGBox18" type="CSGBox" parent="Boxes"]
transform = Transform( 0.657266, 0.750253, 0.0715681, 0.020422, -0.112655, 0.993424, 0.753382, -0.651482, -0.0893662, -3.76075, 8.26408, -6.30914 )

[node name="CSGBox2" type="CSGBox" parent="Boxes"]
transform = Transform( 0.726571, 0.436621, 0.530524, 0.301037, 0.491787, -0.817021, -0.617633, 0.753331, 0.225879, 3.315, -2.73501, 0 )

[node name="CSGBox3" type="CSGBox" parent="Boxes"]
transform = Transform( 0.698968, -0.631937, -0.334814, 0.698488, 0.703722, 0.12996, 0.153489, -0.324701, 0.933279, -0.444586, -9.1826, -8.54497 )

[node name="CSGBox4" type="CSGBox" parent="Boxes"]
transform = Transform( 0.698968, -0.631937, -0.334814, 0.368241, 0.719363, -0.588995, 0.61306, 0.288397, 0.735516, -4.01557, -4.54497, -8.54497 )

[node name="CSGBox5" type="CSGBox" parent="Boxes"]
transform = Transform( -0.00945158, -0.161533, 0.986822, 0.955772, -0.291568, -0.0385725, 0.293956, 0.942812, 0.157144, -9.72902, -2.28335, -8.54497 )

[node name="CSGBox6" type="CSGBox" parent="Boxes"]
transform = Transform( -0.00945158, -0.161533, 0.986822, 0.991244, 0.128464, 0.0305221, -0.131701, 0.97847, 0.158904, -9.72902, -10.0966, -8.25423 )

[connection signal="pressed" from="LevelSelect" to="." method="_on_LevelSelect_pressed"]
[connection signal="pressed" from="Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Help" to="." method="_on_Help_pressed"]
